# rust-web-boilerplate

./: Cargo.toml  Dockerfile  LICENSE  README.md
.circleci/: config.yml
src/: api.rs  config.rs  lib.rs  main.rs
tests/: integration.rs
tools/: pre-commit  pre-push
